beta 0.1.4.9: Implementacion de Tests para errores de Base de Datos.