@@ -2,9 +2,13 @@ package com.breakingns.SomosTiendaMas.security.exception;
 
 import java.time.Instant;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import org.springframework.context.support.DefaultMessageSourceResolvable;
+import org.springframework.dao.DataAccessException;
 import org.springframework.data.crossstore.ChangeSetPersister.NotFoundException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -14,115 +18,35 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.ResponseBody;
+import org.springframework.web.bind.annotation.ResponseStatus;
+import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.servlet.NoHandlerFoundException;
 
-@ControllerAdvice
+@RestControllerAdvice
 public class GlobalExceptionHandler {
     
-    @ExceptionHandler(UsuarioBloqueadoException.class)
-    public ResponseEntity<?> manejarUsuarioBloqueado(UsuarioBloqueadoException ex) {
-        Map<String, Object> body = new HashMap<>();
-        body.put("error", "TOO_MANY_REQUESTS");
-        body.put("mensaje", ex.getMessage());
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+    public ResponseEntity<Map<String, List<String>>> handleValidationExceptions(MethodArgumentNotValidException ex) {
+        List<String> errores = ex.getBindingResult().getFieldErrors().stream()
+            .map(error -> error.getDefaultMessage())
+            .collect(Collectors.toList());
 
-        return ResponseEntity.status(HttpStatus.TOO_MANY_REQUESTS).body(body);
-    }
-    
-    @ExceptionHandler(CredencialesInvalidasException.class)
-    public ResponseEntity<?> manejarCredencialesInvalidas(CredencialesInvalidasException ex) {
-        Map<String, Object> body = new HashMap<>();
-        body.put("error", "UNAUTHORIZED");
-        body.put("mensaje", ex.getMessage());
+        Map<String, List<String>> respuesta = new HashMap<>();
+        respuesta.put("messages", errores);
 
-        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(body);
+        return ResponseEntity.badRequest().body(respuesta);
     }
     
-    @ExceptionHandler(TooManyRequestsException.class)
-    public ResponseEntity<Map<String, Object>> handleTooManyRequests(TooManyRequestsException ex) {
-        Map<String, Object> body = new HashMap<>();
-        body.put("timestamp", LocalDateTime.now());
-        body.put("status", HttpStatus.TOO_MANY_REQUESTS.value());
-        body.put("error", "Too Many Requests");
-        body.put("message", ex.getMessage());
-
-        return new ResponseEntity<>(body, HttpStatus.TOO_MANY_REQUESTS);
-    }
-    
-    @ExceptionHandler(SesionNoValidaException.class)
-    public ResponseEntity<String> manejarSesionNoValidaException(SesionNoValidaException ex) {
-        return new ResponseEntity<>(ex.getMessage(), HttpStatus.UNAUTHORIZED);
-    }
-    
-    @ExceptionHandler(SesionActivaNoEncontradaException.class)
-    public ResponseEntity<String> manejarSesionActivaNoEncontradaException(SesionActivaNoEncontradaException ex) {
-        return new ResponseEntity<>(ex.getMessage(), HttpStatus.NOT_FOUND);
-    }
-    
-    @ExceptionHandler(TokenException.class)
-    public ResponseEntity<?> handleTokenException(TokenException ex) {
-        return ResponseEntity.status(HttpStatus.FORBIDDEN).body(Map.of(
-            "error", "Token Inválido",
-            "message", ex.getMessage(),
-            "timestamp", Instant.now(),
-            "status", HttpStatus.FORBIDDEN.value()
-        ));
-    }
-    
-    @ExceptionHandler(RuntimeException.class)
-    public ResponseEntity<Object> handleRuntimeException(RuntimeException ex) {
-        // Puedes personalizar el mensaje o estructura de la respuesta según lo que necesites
-        Map<String, String> response = new HashMap<>();
-        response.put("mensaje", ex.getMessage());  // Esto es lo que estás buscando
-        return new ResponseEntity<>(response, HttpStatus.INTERNAL_SERVER_ERROR);
-    }
-    
-    @ExceptionHandler(EmailInvalidoException.class)
-    public ResponseEntity<String> handleEmailInvalidoException(EmailInvalidoException e) {
-        return ResponseEntity.badRequest().body("{\"mensaje\": \"" + e.getMessage() + "\"}");
-    }
-
-    @ExceptionHandler(NombreUsuarioVacioException.class)
-    public ResponseEntity<String> handleNombreUsuarioVacioException(NombreUsuarioVacioException e) {
-        return ResponseEntity.badRequest().body("{\"mensaje\": \"" + e.getMessage() + "\"}");
-    }
-
-    @ExceptionHandler(ContrasenaVaciaException.class)
-    public ResponseEntity<String> handleContrasenaVaciaException(ContrasenaVaciaException e) {
-        return ResponseEntity.badRequest().body("{\"mensaje\": \"" + e.getMessage() + "\"}");
-    }
-
-    @ExceptionHandler(EmailYaRegistradoException.class)
-    public ResponseEntity<String> handleEmailYaRegistradoException(EmailYaRegistradoException e) {
-        return ResponseEntity.badRequest().body("{\"mensaje\": \"" + e.getMessage() + "\"}");
-    }
-    
-    @ExceptionHandler(TokenExpiradoException.class)
-    public ResponseEntity<?> manejarTokenExpirado(TokenExpiradoException ex) {
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Map.of(
-            "error", "Token expirado",
-            "message", ex.getMessage(),
-            "timestamp", Instant.now().toString()
-        ));
-    }
-
-    @ExceptionHandler(TokenYaUsadoException.class)
-    public ResponseEntity<?> manejarTokenYaUsado(TokenYaUsadoException ex) {
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Map.of(
-            "error", "Token usado",
-            "message", ex.getMessage(),
-            "timestamp", Instant.now().toString()
-        ));
-    }
-    
-    @ExceptionHandler(PasswordIgualAAnteriorException.class)
-    public ResponseEntity<?> handlePasswordIgualAAnterior(PasswordIgualAAnteriorException ex) {
-        return ResponseEntity.badRequest().body(Map.of(
-            "error", "Contraseña repetida",
-            "message", ex.getMessage(),
-            "timestamp", Instant.now()
-        ));
-    }
-    
+    /*
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    @ResponseBody  // muy importante para que devuelva JSON en el body
+    public Map<String, String> handleValidationExceptions(MethodArgumentNotValidException ex) {
+        String mensaje = ex.getBindingResult().getAllErrors().get(0).getDefaultMessage();
+        return Collections.singletonMap("mensaje", mensaje);
+    }*/
+    /*
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<?> handleValidationErrors(MethodArgumentNotValidException ex) {
         String mensaje = ex.getBindingResult()
@@ -132,30 +56,186 @@ public class GlobalExceptionHandler {
                 .findFirst()
                 .orElse("Error de validación.");
         return ResponseEntity.badRequest().body(Map.of("message", mensaje));
+    }*/
+
+    @ExceptionHandler(DataAccessException.class)
+    public ResponseEntity<?> handleDatabaseConnectionError(DataAccessException e) {
+        return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE).body(Map.of(
+            "error", "Error de conexión a la base de datos",
+            "message", e.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.SERVICE_UNAVAILABLE.value()
+        ));
     }
-    
+
+    @ExceptionHandler(UsuarioBloqueadoException.class)
+    public ResponseEntity<?> manejarUsuarioBloqueado(UsuarioBloqueadoException ex) {
+        return ResponseEntity.status(HttpStatus.TOO_MANY_REQUESTS).body(Map.of(
+            "error", "TOO_MANY_REQUESTS",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.TOO_MANY_REQUESTS.value()
+        ));
+    }
+
+    @ExceptionHandler(CredencialesInvalidasException.class)
+    public ResponseEntity<?> manejarCredencialesInvalidas(CredencialesInvalidasException ex) {
+        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of(
+            "error", "UNAUTHORIZED",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.UNAUTHORIZED.value()
+        ));
+    }
+
+    @ExceptionHandler(TooManyRequestsException.class)
+    public ResponseEntity<?> handleTooManyRequests(TooManyRequestsException ex) {
+        return ResponseEntity.status(HttpStatus.TOO_MANY_REQUESTS).body(Map.of(
+            "error", "Too Many Requests",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.TOO_MANY_REQUESTS.value()
+        ));
+    }
+
+    @ExceptionHandler(SesionNoValidaException.class)
+    public ResponseEntity<?> manejarSesionNoValidaException(SesionNoValidaException ex) {
+        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of(
+            "error", "Sesión no válida",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.UNAUTHORIZED.value()
+        ));
+    }
+
+    @ExceptionHandler(SesionActivaNoEncontradaException.class)
+    public ResponseEntity<?> manejarSesionActivaNoEncontradaException(SesionActivaNoEncontradaException ex) {
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of(
+            "error", "Sesión activa no encontrada",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.NOT_FOUND.value()
+        ));
+    }
+
+    @ExceptionHandler(TokenException.class)
+    public ResponseEntity<?> handleTokenException(TokenException ex) {
+        return ResponseEntity.status(HttpStatus.FORBIDDEN).body(Map.of(
+            "error", "Token Inválido",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.FORBIDDEN.value()
+        ));
+    }
+
+    @ExceptionHandler(RuntimeException.class)
+    public ResponseEntity<?> handleRuntimeException(RuntimeException ex) {
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Map.of(
+            "error", "Error interno",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.INTERNAL_SERVER_ERROR.value()
+        ));
+    }
+
+    @ExceptionHandler(EmailInvalidoException.class)
+    public ResponseEntity<?> handleEmailInvalidoException(EmailInvalidoException e) {
+        return ResponseEntity.badRequest().body(Map.of(
+            "error", "Email inválido",
+            "message", e.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.BAD_REQUEST.value()
+        ));
+    }
+
+    @ExceptionHandler(NombreUsuarioVacioException.class)
+    public ResponseEntity<?> handleNombreUsuarioVacioException(NombreUsuarioVacioException e) {
+        return ResponseEntity.badRequest().body(Map.of(
+            "error", "Nombre de usuario vacío",
+            "message", e.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.BAD_REQUEST.value()
+        ));
+    }
+
+    @ExceptionHandler(ContrasenaVaciaException.class)
+    public ResponseEntity<?> handleContrasenaVaciaException(ContrasenaVaciaException e) {
+        return ResponseEntity.badRequest().body(Map.of(
+            "error", "Contraseña vacía",
+            "message", e.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.BAD_REQUEST.value()
+        ));
+    }
+
+    @ExceptionHandler(EmailYaRegistradoException.class)
+    public ResponseEntity<?> handleEmailYaRegistradoException(EmailYaRegistradoException e) {
+        return ResponseEntity.badRequest().body(Map.of(
+            "error", "Email ya registrado",
+            "message", e.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.BAD_REQUEST.value()
+        ));
+    }
+
+    @ExceptionHandler(TokenExpiradoException.class)
+    public ResponseEntity<?> manejarTokenExpirado(TokenExpiradoException ex) {
+        return ResponseEntity.badRequest().body(Map.of(
+            "error", "Token expirado",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.BAD_REQUEST.value()
+        ));
+    }
+
+    @ExceptionHandler(TokenYaUsadoException.class)
+    public ResponseEntity<?> manejarTokenYaUsado(TokenYaUsadoException ex) {
+        return ResponseEntity.badRequest().body(Map.of(
+            "error", "Token ya usado",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.BAD_REQUEST.value()
+        ));
+    }
+
+    @ExceptionHandler(PasswordIgualAAnteriorException.class)
+    public ResponseEntity<?> handlePasswordIgualAAnterior(PasswordIgualAAnteriorException ex) {
+        return ResponseEntity.badRequest().body(Map.of(
+            "error", "Contraseña repetida",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.BAD_REQUEST.value()
+        ));
+    }
+
     @ExceptionHandler(PasswordInvalidaException.class)
     public ResponseEntity<?> manejarPasswordInvalida(PasswordInvalidaException ex) {
-        Map<String, String> respuesta = new HashMap<>();
-        respuesta.put("message", ex.getMessage());
-        return ResponseEntity.badRequest().body(respuesta);
+        return ResponseEntity.badRequest().body(Map.of(
+            "error", "Contraseña inválida",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.BAD_REQUEST.value()
+        ));
     }
-    
-    @ExceptionHandler(RefreshTokenException.class)
-    public ResponseEntity<Map<String, Object>> handleRefreshTokenException(RefreshTokenException ex) {
-        System.out.println(">>>>> Entró al handler de RefreshTokenException");
-        Map<String, Object> body = new HashMap<>();
-        body.put("error", "Token Inválido");
-        body.put("message", ex.getMessage()); // <-- clave esperada por el test
-        body.put("timestamp", Instant.now().toString());
-        body.put("status", HttpStatus.FORBIDDEN.value());
 
-        return ResponseEntity.status(HttpStatus.FORBIDDEN).body(body);
+    @ExceptionHandler(RefreshTokenException.class)
+    public ResponseEntity<?> handleRefreshTokenException(RefreshTokenException ex) {
+        return ResponseEntity.status(HttpStatus.FORBIDDEN).body(Map.of(
+            "error", "Token Inválido",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.FORBIDDEN.value()
+        ));
     }
-    
+
     @ExceptionHandler(UsuarioNoEncontradoException.class)
     public ResponseEntity<?> handleUsuarioNoEncontrado(UsuarioNoEncontradoException ex) {
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("mensaje", ex.getMessage()));
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of(
+            "error", "Usuario no encontrado",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.NOT_FOUND.value()
+        ));
     }
 
     @ExceptionHandler(TokenNoEncontradoException.class)
@@ -163,96 +243,129 @@ public class GlobalExceptionHandler {
         return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of(
             "error", "Token no encontrado",
             "message", ex.getMessage(),
-            "timestamp", Instant.now().toString()
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.NOT_FOUND.value()
         ));
     }
-    
+
     @ExceptionHandler(PrincipalInvalidoException.class)
     public ResponseEntity<?> handlePrincipalInvalido(PrincipalInvalidoException ex) {
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Map.of("error", ex.getMessage()));
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Map.of(
+            "error", "Principal inválido",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.INTERNAL_SERVER_ERROR.value()
+        ));
     }
-    
+
     @ExceptionHandler(PasswordIncorrectaException.class)
     public ResponseEntity<?> manejarPasswordIncorrecta(PasswordIncorrectaException ex) {
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Map.of(
+        return ResponseEntity.badRequest().body(Map.of(
             "error", "Contraseña incorrecta",
             "message", ex.getMessage(),
-            "timestamp", Instant.now().toString()
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.BAD_REQUEST.value()
         ));
     }
 
     @ExceptionHandler(UsernameNotFoundException.class)
     public ResponseEntity<?> manejarUsernameNotFound(UsernameNotFoundException ex) {
         return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of(
-                "error", "Usuario no encontrado",
-                "message", ex.getMessage(),
-                "timestamp", Instant.now().toString()
+            "error", "Usuario no encontrado",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.NOT_FOUND.value()
         ));
     }
 
     @ExceptionHandler(AccessDeniedException.class)
     public ResponseEntity<?> manejarAccessDenied(AccessDeniedException ex) {
         return ResponseEntity.status(HttpStatus.FORBIDDEN).body(Map.of(
-                "error", "Acceso denegado",
-                "message", "No tenés permisos para acceder a este recurso.",
-                "timestamp", Instant.now().toString()
+            "error", "Acceso denegado",
+            "message", "No tenés permisos para acceder a este recurso.",
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.FORBIDDEN.value()
         ));
     }
 
     @ExceptionHandler(UsuarioYaExisteException.class)
     public ResponseEntity<?> handleUsuarioYaExisteException(UsuarioYaExisteException ex) {
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Map.of(
-                "error", "Usuario duplicado",
-                "message", ex.getMessage(),
-                "timestamp", Instant.now().toString()
+        return ResponseEntity.badRequest().body(Map.of(
+            "error", "Usuario duplicado",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.BAD_REQUEST.value()
         ));
     }
 
     @ExceptionHandler(NotFoundException.class)
     public ResponseEntity<?> handleNotFoundException(NotFoundException ex) {
         return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of(
-                "error", "Recurso no encontrado",
-                "message", ex.getMessage(),
-                "timestamp", Instant.now().toString()
+            "error", "Recurso no encontrado",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.NOT_FOUND.value()
         ));
     }
 
     @ExceptionHandler(Exception.class)
     public ResponseEntity<?> manejarExcepcionesGenerales(Exception ex) {
         return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Map.of(
-                "error", "Error interno",
-                "message", ex.getMessage(),
-                "timestamp", Instant.now().toString()
+            "error", "Error interno",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.INTERNAL_SERVER_ERROR.value()
         ));
     }
-    
+
     @ExceptionHandler(TokenInvalidoException.class)
     public ResponseEntity<?> manejarTokenInvalido(TokenInvalidoException ex) {
-        return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                .body(Map.of("error", ex.getMessage()));
+        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of(
+            "error", "Token inválido",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.UNAUTHORIZED.value()
+        ));
     }
-    
-    
+
     @ExceptionHandler(SesionNoEncontradaException.class)
     public ResponseEntity<?> manejarSesionNoEncontrada(SesionNoEncontradaException ex) {
-        return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                .body(Map.of("error", ex.getMessage()));
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of(
+            "error", "Sesión no encontrada",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.NOT_FOUND.value()
+        ));
     }
-    
+
     @ExceptionHandler(AccesoDenegadoException.class)
     public ResponseEntity<?> manejarAccesoDenegado(AccesoDenegadoException ex) {
-        return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                .body(Map.of("error", ex.getMessage()));
+        return ResponseEntity.status(HttpStatus.FORBIDDEN).body(Map.of(
+            "error", "Acceso denegado",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.FORBIDDEN.value()
+        ));
     }
-    
+
     @ExceptionHandler(AuthenticationException.class)
     public ResponseEntity<?> manejarAuthenticationException(AuthenticationException ex) {
         return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of(
-                "error", "Autenticación fallida",
-                "message", ex.getMessage(),
-                "timestamp", Instant.now().toString()
+            "error", "Autenticación fallida",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.UNAUTHORIZED.value()
         ));
     }
+    
+    
+    
+    
+    
+    
+    
+
+    
     
     /*
     
@@ -277,17 +390,32 @@ public class GlobalExceptionHandler {
     */
     
     @ExceptionHandler(IllegalArgumentException.class)
-    public ResponseEntity<String> handleIllegalArgument(IllegalArgumentException ex) {
-        return ResponseEntity.badRequest().body(ex.getMessage());
+    public ResponseEntity<?> handleIllegalArgument(IllegalArgumentException ex) {
+        return ResponseEntity.badRequest().body(Map.of(
+            "error", "Argumento ilegal",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.BAD_REQUEST.value()
+        ));
     }
 
     @ExceptionHandler(RolNoEncontradoException.class)
-    public ResponseEntity<String> handleRolNoEncontrado(RolNoEncontradoException ex) {
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(ex.getMessage());
+    public ResponseEntity<?> handleRolNoEncontrado(RolNoEncontradoException ex) {
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Map.of(
+            "error", "Rol no encontrado",
+            "message", ex.getMessage(),
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.INTERNAL_SERVER_ERROR.value()
+        ));
     }
-    
+
     @ExceptionHandler(NoHandlerFoundException.class)
-    public ResponseEntity<String> handleNoHandlerFound(NoHandlerFoundException ex) {
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Ruta no encontrada");
+    public ResponseEntity<?> handleNoHandlerFound(NoHandlerFoundException ex) {
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of(
+            "error", "Ruta no encontrada",
+            "message", "La URL solicitada no existe",
+            "timestamp", Instant.now().toString(),
+            "status", HttpStatus.NOT_FOUND.value()
+        ));
     }
 }
